# pcm

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: test_generative_resnet.py  test_vit_heatmap.py  train_bp_vit_mnist.py  train_generative_pcn.py  train_generative_resnet_tiny_imagenet.ipynb  train_generative_resnet_tiny_imagenet.py  train_pc_mlp.py  train_pc_resnet.py  train_pc_vit.py  train_pc_vit_mnist.py
scripts/: download_tiny_imagenet.py
src/PCModel/: network.py
src/pcm/: __init__.py  blocks.py  datasets.py  mlp.py  network.py  resnet.py  vit.py
tests/: __init__.py  test_network.py  test_single_edge_vit.py
