[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PCModel"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "jax",
    "equinox",
    "optax",
]

[tool.setuptools.packages.find]
where = ["src"]
