[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pcm"
version = "0.0.1"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "jax",
    "equinox",
    "optax",
    "numpy",
    "torch",
    "torchvision",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "jupyterlab",
    "ipykernel",
]

[tool.setuptools.packages.find]
where = ["src"]
